<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/prompt_barber_login"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/ll_capture_logins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/login_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginBottom="@dimen/edit_text_bottom_margin"/>
        <EditText
            android:id="@+id/login_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/edit_text_bottom_margin"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_capture_logins"
        android:text="Register"
        android:textColor="#0000ff"
        android:onClick="onClickSwitchToRegister"/>
    <Button
        android:layout_marginTop="20dp"
        android:text="LogIn"
        android:id="@+id/btn_login"
        android:layout_below="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick= "onClickLogin"/>
</RelativeLayout>