<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/selectApp"
            android:text="Select Appointments"
            android:textSize="@dimen/button_text_size"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/button_bottom_margin"
            android:layout_height="@dimen/button_vertical_dimension"
            android:onClick="onClickSelectAppointments"/>
        <Button
            android:id="@+id/manageSchedule"
            android:text="Manage Schedule"
            android:textSize="@dimen/button_text_size"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/button_bottom_margin"
            android:layout_height="@dimen/button_vertical_dimension"
            android:onClick="onClickManageSchedule"/>
        <Button
            android:id="@+id/logout"
            android:text="Logout"
            android:textSize="@dimen/button_text_size"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/button_bottom_margin"
            android:layout_height="@dimen/button_vertical_dimension"
            android:onClick = "onClickLogout"/>
    </LinearLayout>
</RelativeLayout>