<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="Please fill in your information below:"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Admin Password"
                android:inputType="textPassword"
                android:id="@+id/register_edit_text_admin_password"
                android:background="@drawable/background_txt_box"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:id="@+id/register_edit_text_first_name"
                android:background="@drawable/background_txt_box"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name"
                android:id="@+id/register_edit_text_last_name"
                android:background="@drawable/background_txt_box"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:id="@+id/register_edit_text_phone_number"
                android:inputType="phone"
                android:background="@drawable/background_txt_box"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="E-mail"
                android:id="@+id/register_edit_text_email"
                android:inputType="textEmailAddress"
                android:background="@drawable/background_txt_box"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"
                android:id="@+id/register_edit_text_password"
                android:background="@drawable/background_txt_box"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Confirm Password"
                android:id="@+id/register_edit_text_confirm_password"
                android:background="@drawable/background_txt_box"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="Please enter a short description of your shop below:"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin"/>
            <EditText
                android:layout_width="match_parent"
                android:hint="Description...."
                android:id="@+id/register_edit_text_description"
                android:gravity="top"
                android:layout_height="150dp"
                android:background="@drawable/description_background"
                android:layout_marginBottom="@dimen/edit_text_bottom_margin"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register"
                android:id="@+id/register_button_register"
                android:onClick="onClickRegister"
                android:layout_marginBottom="@dimen/button_bottom_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log in"
                android:onClick="onClickswitchToLogIn"
                android:id="@+id/register_text_view_log_in"
                android:textSize="@dimen/text_size"
                android:textColor="#0000FF"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>