<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_all_margins">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Enter your contact information:"
            android:textSize="@dimen/text_size"/>
        <EditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name" />
        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name" />
        <EditText
            android:id="@+id/edit_text_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="Phone Number"/>
        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:hint="Email"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Upload a picture of your desired haircut (optional):"
            android:textSize="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <Button
            android:id="@+id/button_upload_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Upload Photo"
            android:onClick="onClickUploadPhoto"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Additional notes (optional):"
            android:textSize="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <EditText
            android:id="@+id/edit_text_notes"
            android:layout_width="match_parent"
            android:layout_height="140dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_reserve_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reserve Appointment"
        android:layout_alignParentBottom="true"
        android:onClick="onClickReserveAppointment"/>
</RelativeLayout>